--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -35,6 +35,7 @@
     "redux-persist": "^6.0.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
+    "tailwindcss": "^4.1.12",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
